modal grayed issue fixed by setting z-index to bellow the zindex of navbar or auto

--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,8 @@
     text-align: end;
     width: 500px;
 }
+
+/*modal was grayed out as z-index was more then z-index for nav bar*/
+.modal-backdrop {
+    z-index: auto;
+}
